Fixing page stretching on cliking the link to anchor

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
@@ -11,6 +11,20 @@
  * It will be included in all color schemes
  */
 
+ // Issue with homepage display being stretched out
+
+.horizontal-slider {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  #main-content, #sidebar {
+      display: flex;
+      flex-direction: column;
+  }
+}
+
 //example mixin to set the text-selection style
 @mixin selection {
     ::-moz-selection { @content; }
@@ -60,21 +74,15 @@
   }
 }
 
-// Issue with homepage display being stretched out
-
-.horizontal-slider {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    #main-content, #sidebar {
-        display: flex;
-        flex-direction: column;
-    }
+// Main content stretching fix
+.main-content {
+	margin: 0 auto;
+  // padding-bottom: 0;
+  // padding-bottom: 10px;
 }
 
 // Skip link
+
 .main-content-tabber, .main-content-tabber:hover {
 	position: absolute;
 	top: 0;
@@ -83,5 +91,6 @@
 }
 
 .main-content-tabber:focus, .main-content-tabber:active {
+  display: inline;
 	color: #b72c32;
 }
